@@ -24,6 +24,9 @@
 #include <stdlib.h>
 
 #include "portmidi.h"
+#ifdef NEWBUFFER
+#include "pmutil.h"
+#endif
 #include "pminternal.h"
 #include "porttime.h"
 #include "pmmac.h"
